# formatter

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/formats/: bash.rs  css.rs  dockerfile.rs  go.rs  graphql.rs  hcl.rs  html.rs  ini.rs  javascript.rs  json.rs  lua.rs  makefile.rs  markdown.rs  mod.rs  nginx.rs  protobuf.rs  python.rs  rlang.rs  rustfmt.rs  sql.rs  toml_fmt.rs  typescript.rs  xml.rs  yaml.rs
tests/: bash_fixture.rs  bash_tests.rs  format_smoke.rs  yaml_tests.rs
