[package]
name = "formatter"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
ignore = "0.4"
once_cell = "1.19"
ini = { package = "rust-ini", version = "0.21" }
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
gofmt = "0.1"
pretty_graphql = "0.2"
hcl-rs = "0.19"
stylua = { version = "2.3", default-features = false, features = ["lua54"] }
dprint-plugin-json = "0.21"
dprint-plugin-markdown = "0.20"
dprint-plugin-toml = "0.7"
dprint-plugin-typescript = "0.95"
dprint-plugin-css = "0.2"
dprint-plugin-dockerfile = "0.3"
dprint-plugin-sql = "0.2"
dprint-plugin-ruff = "0.0.1"
tempfile = "3.10"
quick-xml = "0.31"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
tree-sitter = "0.20"
pepegsitter = { version = "0.2.2", default-features = false, features = ["bash"] }
pretty_yaml = "0.5.1"
